mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_wrong_interface.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Class 'C' does not implement method 'foo' required by interface 'I'
--> test_scripts/error_cases/semantic_wrong_interface.mux:5:1
   |
 5 | class C is I {
   | ^^^^^
   |
= help: Add a method 'foo' to class 'C' with the signature required by interface 'I'
